# zeply-python-challenge

./: .gitignore  README.md  alembic.example.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 2dbb373604e9_.py  90b56e393f2d_.py  b2f34cb2352d_.py  fb1c7cc20c97_.py
tests/: conftest.py
tests/wallets/: test_service.py
zeply_python_challenge/: .env.example  config.py  database.py  main.py  response_schemas.py  utils.py
zeply_python_challenge/wallets/: constants.py  exceptions.py  models.py  schemas.py  service.py  views.py
