[tool.poetry]
name = "zeply-python-challenge"
version = "0.1.0"
description = ""
authors = ["Admin <admin@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.8.5"
alembic = "^1.4.2"
asyncpg = "^0.25.0"
aiohttp = "^3.8.1"
SQLAlchemy = {extras = ["mypy"], version = "^2.0.9"}
python-jose = "^3.3.0"
passlib = "^1.7.4"
pydantic = {extras = ["email"], version = "^1.9.2"}
pre-commit = "^2.19.0"
hdwallet = "^2.2.1"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
python-dotenv = "^1.0.0"
fastapi = {extras = ["all"], version = "^0.95.1"}
pytest = {extras = ["asyncio"], version = "^7.3.1"}
pytest-asyncio = "^0.21.0"


[tool.poetry.dev-dependencies]
safety = "^1.10.3"
mypy = "^0.950"
black = "^21.12b0"
isort = "^4.3.21"
Faker = "^13.4.0"
pytest = "^7.1.2"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pre-commit = "^2.16.0"
types-aiofiles = "^0.8.3"
sqlalchemy2-stubs = "^0.0.2a19"

[tool.black]
line-length = 79
target-version = ["py310"]

[tool.isort]
profile = "black"
filter_files = true
force_single_line = true
line_length = 79

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.mypy]
plugins = [
  "pydantic.mypy",
  "sqlalchemy.ext.mypy.plugin"
]
warn_redundant_casts = true
disallow_untyped_defs = true
ignore_missing_imports = true
disallow_any_generics=true
no_implicit_optional = true
check_untyped_defs = true
exclude = [
  "alembic",
  "scripts"
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
warn_untyped_fields = true
